--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ referencing lists that have already been evaluated.</p>
 <span class="c1"># =&gt; [[1, 1, 2], [2, 1, 3], [2, 2, 4], [3, 1, 4], [3, 2, 5], [3, 3, 6]]</span>
 </pre></div>
 
-<p><em>Important note: In Ruby 2.0.x Comprise makes use of Lazy emuerators.</em></p>
+<p><em>Important note: In Ruby 2.0.x Comprise makes use of Lazy enumerators.</em></p>
 
 <h2>Contributing</h2>
 
